--- a/application/pom.xml
+++ b/application/pom.xml
@@ -49,6 +49,13 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.vladmihalcea</groupId>
+      <artifactId>hibernate-types-52</artifactId>
+      <version>2.9.8</version>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
       <plugin>
