Creating a docker container to run both java service and postgres

--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.batch.initialize-schema=never
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/job_portal
+#spring.datasource.url=jdbc:postgresql://localhost:9999/job_portal
+spring.datasource.url=jdbc:postgresql://postgres:5432/job_portal
 spring.datasource.username=test
 spring.datasource.password=test
 
