--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,19 @@
 version: '3.1'
 
 services:
+  web:
+    image: upraised/jobportal:1.0
+    ports:
+      - "9090:8080"
+    depends_on:
+      - postgres
   postgres:
     image: postgres:10.12
     ports:
-    - "5432:5432"
+      - "9999:5432"
     environment:
       - POSTGRES_USER=test
       - POSTGRES_PASSWORD=test
       - POSTGRES_DB=job_portal
     volumes:
-      - ./data/postgres:/var/lib/postgresql/data
+      - ./database/data/postgres:/var/lib/postgresql/data
