Changes to load initial postgres data

--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 logging.level.org.springframework=ERROR
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.batch.initialize-schema=never
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
