--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -1,19 +1,14 @@
 version: '3.1'
 
 services:
-  web:
-    image: upraised/jobportal:1.0
-    ports:
-      - "9090:8080"
-    depends_on:
-      - postgres
   postgres:
     image: mypostgres:10.12
+    container_name: my-postgres-container
     ports:
-      - "9999:5432"
+    - "9999:5432"
     environment:
       - POSTGRES_USER=test
       - POSTGRES_PASSWORD=test
       - POSTGRES_DB=job_portal
     volumes:
-      - ./database/data/postgres:/var/lib/postgresql/data
+      - ./data/postgres:/var/lib/postgresql/data
