--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 logging.level.org.springframework=ERROR
 
+spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
 spring.batch.initialize-schema=never
+spring.datasource.initialization-mode=never
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.platform=postgres
